2023-11-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Fix a codegen crash affecting sm83 function calls via pointers to functions returning struct.

2023-11-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Fully enable code speed optimization for z80 (and related).

2023-11-25 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Improve cost function accuracy.

2023-11-25 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c,
	  src/z80/gen.c:
	  Shift optimization using information from generalized constant propagation.

2023-11-24 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Fix bug #3680.

2023-11-24 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Fix bug #3679.

2023-11-23 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Speed optimization in register allocation for z80 and related.

2023-11-22 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Preparations for improved speed optimization for z80.
	* src/*/ralloc2.cc:
	  Do another execution frequency estimate just before register allocation to improve the accuracy of speed optimizations.
	* src/mcs51/main.c,
	  src/mcs51/peep.c,
	  src/mcs51/peep.h:
	  Implement notUsed peephole condition for mcs51, patch by Oleg Endo.

2023-11-21 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  src/pdk/gen.c,
	  support/regression/tests/bug-3678.c:
	  Preparations for improved speed optimization for z80. Fix bug #3678.
	* src/z80/peeph.def:
	  Fix a peephole rule bug.
	* src/SDCCmain.c:
	  Use -std=c23 when calling preprocessor.

2023-11-20 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/c-family/c-common.{cc,h},
	  support/cpp/gcc/c-family/c-{lex,opts}.cc,
	  support/cpp/gcc/c-family/c.opt,
	  support/cpp/gcc/c/c-errors.cc:
	  Fix #3677.

2023-11-20 Philipp Klaus Krause <philipp@colecovision.eu>
