@@ -1,4 +1,10 @@
-2023-11-26 Philipp Klaus Krause <philipp@colecovision.eu>
+2023-11-28 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/mcs51/peep.c,
+	  src/mcs51/peeph.def:
+	  Replace deadMove by notUsed in non-push/pop roles.
+
+2023-11-27 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/z80/gen.c:
 	  Fix a codegen crash affecting sm83 function calls via pointers to functions returning struct.
